<resources>
    <string name="app_name">G5–104</string>
    //String MainActivity
    <string name="btnInit">Login</string>

    //String Home
    <string name="textTitle">Products</string>
    <string name="textProduct1">Blue Jean</string>
    <string name="textProduct2">Black Shoes</string>
    <string name="textProduct3">White T-Shirt</string>
    <string name="btnProduct1">Information</string>
    <string name="btnProduct2">Information</string>
    <string name="btnProduct3">Information</string>

    //String Home
    <string name="btnToHome">Back</string>

    <string name="btnRegister">Register</string>
    <string name="btnSingUp">Sing In</string>7

    <string name="Map">Map</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPass">Confirm Password</string>


    //String Menu
    <string name="btnAdd">Add</string>
    <string name="btnGet">Get</string>
    <string name="btnDelete">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="tittleForm">Form</string>


    //String productForm
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>


</resources>